<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_disciplinas"
            android:icon="@drawable/ic_menu_disciplinas"
            android:title="@string/menu_disciplinas" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_menu_media"
            android:title="@string/menu_media" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit_logout_2857"
            android:title="@string/menu_logout" />
    </group>
</menu>